[tool.poetry]
name = "git-acp-ansible"
version = "2.1.0"
description = "Git Add/Commit/Push Ansible module."
authors = ["Federico Olivieri <lvrfrc87@gmail.com"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/lvrfrc87/git-acp-ansible"
repository = "https://github.com/lvrfrc87/git-acp-ansible"
keywords = ["ansible", "git", "automation", "devops"]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
ansible = "^4.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
ansible-lint = "*"
