[tool.poetry]
name = "git-mactp-ansible"
version = "3.0.0"
description = "Git operations Ansible module."
authors = ["Federico Olivieri <lvrfrc87@gmail.com>", "Julian Mathes <julian.mathes@studyly.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/Studyly-GmbH/git-mactp-ansible"
repository = "https://github.com/Studyly-GmbH/git-mactp-ansible"
keywords = ["ansible", "git", "automation", "devops"]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
ansible = "^4.2"
python = "^3.7"

[tool.poetry.dev-dependencies]
ansible-lint = "*"
